# A-B-Testing-Platform

./: .credo.exs  .dockerignore  .gitignore  Dockerfile.experiment-hub-web  ExperimentHub_Master_Prompt.md  README.md  cacerts.pem  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml  mix.exs  release.env.example
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
apps/assignment_engine/: .gitignore  README.md  mix.exs
apps/event_collector/: .gitignore  README.md  mix.exs
apps/experiment_hub/: .gitignore  README.md  mix.exs
apps/experiment_hub_web/: .gitignore  README.md  mix.exs
assignment_core/: Cargo.toml
assignment_core/src/: assignment.rs  hash.rs  lib.rs  wasm.rs
assignment_core/tests/: assignment_test.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
dashboard/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx
data_pipeline/: mypy.ini  pyproject.toml
data_pipeline/src/: __init__.py
data_pipeline/src/consumers/: event_consumer.py
data_pipeline/src/transforms/: event_filter.py
data_pipeline/tests/: test_event_filter.py
docs/: api-reference.md  setup-deployment-and-user-guide.md
docs/sdk/: elixir-quickstart.md  javascript-quickstart.md
k6/: assignment_load.js  concurrent_experiments_load.js  dashboard_load.js  event_ingestion_load.js  multi_tenant_capacity.js
specs/001-experimenthub-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/experimenthub/: constitution.md
statistical_engine/: Dockerfile  pyproject.toml  ruff.toml
statistical_engine/src/: __init__.py
statistical_engine/src/api/: main.py
statistical_engine/src/api/routes/: health.py
statistical_engine/src/core/: __init__.py  frequentist.py  power.py
statistical_engine/tests/: test_api.py  test_bayesian.py  test_frequentist.py  test_power.py  test_sequential.py
tmp/browser-pass/: start_phx_no_oban.exs
(+263 files in other folders)
