[package]
name = "assignment_core"
version = "0.1.0"
edition = "2021"
description = "Deterministic variant assignment library using MurmurHash3"

[lib]
name = "assignment_core"
crate-type = ["lib", "cdylib"]

[dependencies]
murmur3 = "0.5"
rustler = "0.35"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "assignment_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
