[project]
name = "data-pipeline"
version = "0.1.0"
description = "Data pipeline background workers for ExperimentHub event aggregation"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
